# horizon-rs

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: rust.yml  rustdoc.yml
horizon-env/: Cargo.toml
horizon-env/src/: lib.rs
horizon-error/: Cargo.toml
horizon-error/src/: kernel.rs  lib.rs
horizon-global/: Cargo.toml
horizon-global/src/: environment.rs  lib.rs  mounts.rs  services.rs  sm_session.rs  virtual_memory.rs
horizon-global/src/environment/: impl.rs  mod.rs
horizon-global/src/heap/: buddy.rs  mod.rs
horizon-global/src/heap/impl/: buddy.rs  mod.rs
horizon-global/src/mounts/: impl.rs  mod.rs
horizon-ipc/: Cargo.toml
horizon-ipc/src/: buffer.rs  cmif.rs  conv_traits.rs  handle_storage.rs  hipc.rs  lib.rs  sm.rs
horizon-ipc/src/cmif/: control.rs  mod.rs
horizon-ipc/src/raw/: c_types.rs  cmif.rs  hipc.h  hipc.rs  hipc_conv.rs  mod.rs
horizon-ipcdef/: Cargo.toml
horizon-ipcdef-codegen/: Cargo.toml
horizon-ipcdef-codegen/src/: ipc_parse.rs  main.rs  reqwest_client.rs
horizon-ipcdef-codegen/src/ninupdates/: cli.rs  ipc_parse.rs  mod.rs
horizon-ipcdef-codegen/src/swipc/: cli.rs  diagnostics.rs  layout.rs  mod.rs  model.rs  swipc.lalrpop  typecheck.rs  util.rs
horizon-ipcdef-codegen/src/swipc/codegen/: interface.rs  mod.rs  types.rs
horizon-ipcdef/defs/: account.id  fspsrv.id  ldr.id  ncm.id  sm.id  spl.id
horizon-ipcdef/src/: lib.rs  log.rs
horizon-ipcdef/src/ext/: fspsrv.rs  mod.rs  sm.rs  spl.rs
horizon-rt/: Cargo.toml
horizon-rt/src/: hbl.rs  init.rs  lib.rs  relocate.rs  rt_abort.rs  tls.rs
horizon-svc/: Cargo.toml
horizon-svc-codegen/: Cargo.toml
horizon-svc-codegen/src/: main.rs
horizon-svc/src/: lib.rs  nr.rs  raw.rs
horizon-sync/: Cargo.toml
horizon-sync/src/: futex.rs  lib.rs  mutex.rs  raw_mutex.rs  raw_rw_lock.rs  rw_lock.rs
