[package]
name = "horizon-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.70", optional = true }

horizon-svc = { path = "../horizon-svc" }

[features]
rustc-dep-of-std = [
    'core',
    'compiler_builtins',
]
