[package]
name = "horizon-global"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-std-workspace-core = { version = "1.0.0", optional = true }
compiler_builtins = { version = "0.1.70", optional = true }

horizon-sync = { path = "../horizon-sync" }
horizon-ipc = { path = "../horizon-ipc" }

[features]
rustc-dep-of-std = [
    'rustc-std-workspace-core',
    'compiler_builtins',
    'horizon-sync/rustc-dep-of-std',
    'horizon-ipc/rustc-dep-of-std',
]
