[package]
name = "horizon-global"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-std-workspace-core = { version = "1.0.0", optional = true }
compiler_builtins = { version = "0.1.70", optional = true }
cfg-if = "1.0.0"

horizon-sync = { path = "../horizon-sync" }
horizon-ipc = { path = "../horizon-ipc" }
horizon-error = { path = "../horizon-error" }

[features]
default = []
impl = []
rustc-dep-of-std = [
    'rustc-std-workspace-core',
    'compiler_builtins',
    'cfg-if/rustc-dep-of-std',
    'horizon-sync/rustc-dep-of-std',
    'horizon-ipc/rustc-dep-of-std',
    'horizon-error/rustc-dep-of-std',
]
