[package]
name = "horizon-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horizon-error = { path = "../horizon-error" }
horizon-svc = { path = "../horizon-svc" }

core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.70", optional = true }


[features]
rustc-dep-of-std = [
    'core',
    'compiler_builtins',
    'horizon-svc/rustc-dep-of-std',
    'horizon-error/rustc-dep-of-std',
]