[package]
name = "horizon-ipcdef-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = [ "blocking", "rustls-tls" ] }
scraper = "0.13.0"
regex = "1.5.6"
once_cell = "1.12.0"
py_literal = "0.4.0"
anyhow = "1.0.58"