[package]
name = "horizon-ipcdef-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = [ "blocking", "rustls-tls" ] }
reqwest-middleware = "0.1.6"
reqwest-middleware-cache = "0.1.1"
scraper = "0.13.0"
regex = "1.5.6"
once_cell = "1.12.0"
py_literal = "0.4.0"
anyhow = "1.0.58"
tokio = "1.19.2"
app_dirs2 = "2.5.1"
arcstr = "1.1.4"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
codespan-reporting = "0.11.1"
thiserror = "1.0.31"
derivative = "2.2.0"
itertools = "0.10.3"

[build-dependencies]
lalrpop = "0.19.8"
