[package]
name = "horizon-ipcdef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horizon-ipc = { path = "../horizon-ipc" }
horizon-svc = { path = "../horizon-svc" }
horizon-error = { path = "../horizon-error" }

bitflags = "1.3.2"