[package]
name = "horizon-ipcdef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horizon-ipc = { path = "../horizon-ipc" }
horizon-svc = { path = "../horizon-svc" }
horizon-error = { path = "../horizon-error" }

rustc-std-workspace-core = { version = "1.0.0", optional = true }
compiler_builtins = { version = "0.1.70", optional = true }

bitflags = "1.3.2"

[features]
std = []
log-ipc-buffers = [
    "std"
]
rustc-dep-of-std = [
    'rustc-std-workspace-core',
    'compiler_builtins',
    'horizon-ipc/rustc-dep-of-std',
    'horizon-svc/rustc-dep-of-std',
    'horizon-error/rustc-dep-of-std',
]