#cargo-features = ["per-package-target"]

[package]
name = "horizon-rt"
version = "0.1.0"
edition = "2021"
#default-target = "aarch64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.70", optional = true }

[features]
rustc-dep-of-std = [
    'core',
    'compiler_builtins',
    'compiler_builtins/mem', # expose stuff like memcpy, memmove etc
]