[package]
name = "horizon-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-std-workspace-core = { version = "1.0.0", optional = true }
compiler_builtins = { version = "0.1.70", optional = true }

horizon-error = { path = "../horizon-error" }
horizon-svc = { path = "../horizon-svc" }
horizon-global = { path = "../horizon-global" }
horizon-ipc = { path = "../horizon-ipc" }
horizon-ipcdef = { path = "../horizon-ipcdef" }

bitflags = "1.3.2"

[features]
rustc-dep-of-std = [
    'rustc-std-workspace-core',
    'compiler_builtins',
    'compiler_builtins/mem', # expose stuff like memcpy, memmove etc

    'bitflags/rustc-dep-of-std',
    'horizon-error/rustc-dep-of-std',
    'horizon-svc/rustc-dep-of-std',
    'horizon-global/rustc-dep-of-std',
    'horizon-ipc/rustc-dep-of-std',
    'horizon-ipcdef/rustc-dep-of-std',
]