[package]
name = "horizon-svc-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = [ "blocking", "rustls-tls" ] }
table-extract = "0.2.2"
semver = "1.0.9"
anyhow = "1.0.57"
regex = "1.5.6"
lazy_static = "1.4.0"
quote = "1.0.18"
proc-macro2 = "1.0.39"
heck = "0.4.0"
which = "4.2.5"