cargo-features = ["per-package-target"]

[package]
name = "horizon-svc"
version = "0.1.0"
edition = "2021"
default-target = "aarch64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horizon-error = { path = "../horizon-error" }

bitflags = "1.3.2"