[package]
name = "horizon-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.70", optional = true }

horizon-error = { path = "../horizon-error" }

bitflags = "1.3.2"

[features]
rustc-dep-of-std = [
    'core',
    'compiler_builtins',

    'horizon-error/rustc-dep-of-std',
    'bitflags/rustc-dep-of-std',
]
